--- a/SEA_Application/Views/InventoryCategories/Create.cshtml
+++ b/SEA_Application/Views/InventoryCategories/Create.cshtml
@@ -10,6 +10,12 @@ else if (User.IsInRole("Receptionist"))
     Layout = "~/Views/Shared/_ReceptionistDashboardLayout.cshtml";
 
 }
+else if (User.IsInRole("BakeryAdmin"))
+{
+
+    Layout = "~/Views/Shared/_BakeryAdminDashboardLayout.cshtml";
+
+}
 else
 {
     Layout = null;
