--- a/SEA_Application/Views/Sales/SaleByQuantity.cshtml
+++ b/SEA_Application/Views/Sales/SaleByQuantity.cshtml
@@ -9,6 +9,12 @@ else if (User.IsInRole("Cashier"))
     Layout = "~/Views/Shared/_CashierDashboardLayout.cshtml";
 
 }
+else if (User.IsInRole("BakeryAdmin"))
+{
+
+    Layout = "~/Views/Shared/_BakeryAdminDashboardLayout.cshtml";
+
+}
 
 <style>
 
