--- a/SEA_Application/Views/Shared/_CashierDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_CashierDashboardLayout.cshtml
@@ -95,7 +95,7 @@
             -->
             <div class="logo d-flex" style="background-color:white !important;">
                 <a class="simple-text logo-normal" href="#" style="flex: 3;">
-                    <img class="transparent" alt="" src="~/Content/assets/assets/img/orignal.png" height="143" width="143">
+                    <img class="transparent" alt="" src="~/Content/assets/assets/img/Bis.jpg" height="143" width="143">
                 </a>
                 <a class="simple-text collapseSide hidden" onclick="collapseSide(this);" href="#" style="flex: 1;">
                     <img class="transparent" alt="" src="~/Content/assets/img/sidebar.png">
