--- a/SEA_Application/Views/Inventory/PurchaseOrderDetails.cshtml
+++ b/SEA_Application/Views/Inventory/PurchaseOrderDetails.cshtml
@@ -1,15 +1,35 @@
-﻿
-@{
-    ViewBag.Title = "ViewSaleOrderDetails";
+﻿@if (User.IsInRole("Admin"))
+{
     Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
+
+else if (User.IsInRole("Receptionist"))
+{
+    Layout = "~/Views/Shared/_ReceptionistDashboardLayout.cshtml";
+
+}
+else if (User.IsInRole("BakeryAdmin"))
+{
+
+    Layout = "~/Views/Shared/_BakeryAdminDashboardLayout.cshtml";
+
+}
+else if (User.IsInRole("InventoryManager"))
+{
+    Layout = "~/Views/Shared/_InventoryManagerDashboardLayout.cshtml";
+}
+else
+{
+    Layout = null;
+
+}
+
 
 <style>
 
     th, td {
         padding: 5px;
     }
-
 </style>
 
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
@@ -27,9 +47,9 @@
                 <tr>
                     <th>Product Name</th>
                     <th>Vendor Name</th>
-                    
+
                     <th>Quantity</th>
-                    
+
                 </tr>
 
             </thead>
@@ -61,7 +81,7 @@
             success: function (data) {
                 //  table.fnClearTable();
 
-              //  var Status = data.Status;
+                //  var Status = data.Status;
                 //var StudentNameAndRollNo = data.StudentName;
                 //var DateAndTime = data.DateTime;
                 //var Total = data.Total;
@@ -86,7 +106,7 @@
                 //    value.getFullYear() + " " + value.getHours() + ":" + value.getMinutes() + ":" + value.getSeconds();
 
 
-              //  var DiscountRow = "<tr>  <td style='word-break:break-all;' class='description'>Discount</td>  <td class='quantity'>&nbsp; </td> <td class='price'></td> <td class='Amount'>&nbsp;&nbsp; -" + Discount + "</td> </tr>";
+                //  var DiscountRow = "<tr>  <td style='word-break:break-all;' class='description'>Discount</td>  <td class='quantity'>&nbsp; </td> <td class='price'></td> <td class='Amount'>&nbsp;&nbsp; -" + Discount + "</td> </tr>";
                 //var DiscountedRow = "<tr>  <td style='word-break:break-all;' class='description'>Total</td>  <td class='quantity'>&nbsp; </td> <td class='price'></td> <td class='Amount'>&nbsp;&nbsp;" + DiscountedPrice + "</td> </tr>";
 
                 var TableRow = "";
@@ -101,7 +121,7 @@
                     //  table.fnAddData([data[index].OrderNo, dat, data[index].StudentName, data[index].Status, data[index].Discount, data[index].DiscountedPrice, "<input type='button' class='btn btn-sm btn-primary' style='color:white !important' value='View Details' onclick='OrderDetails(" + data[index].Id + ")'> "]);
 
 
-                  //  TableRow = TableRow + "<tr>  <td class='description'>" + SaleDetailList[index].InventoryName + "</td> <td class='quantity' > &nbsp;&nbsp;&nbsp;&nbsp; " + SaleDetailList[index].Quantity + "</td> <td  class='price'>" + SaleDetailList[index].UnitSalePrice + "</td>  <td   class='Amount' >&nbsp; " + SaleDetailList[index].Cost + "</td></tr>";
+                    //  TableRow = TableRow + "<tr>  <td class='description'>" + SaleDetailList[index].InventoryName + "</td> <td class='quantity' > &nbsp;&nbsp;&nbsp;&nbsp; " + SaleDetailList[index].Quantity + "</td> <td  class='price'>" + SaleDetailList[index].UnitSalePrice + "</td>  <td   class='Amount' >&nbsp; " + SaleDetailList[index].Cost + "</td></tr>";
 
 
                 });
@@ -109,7 +129,7 @@
 
 
 
-              //  $("#tbody").append("<tr><td></td><td></td><td>Discount</td><td>-" + Discount + "</td></tr>");
+                //  $("#tbody").append("<tr><td></td><td></td><td>Discount</td><td>-" + Discount + "</td></tr>");
                 //$("#tbody").append("<tr><td></td><td></td><td>Discounted Price</td><td>" + DiscountedPrice + "</td></tr>");
 
                 // SaleDetailList = null;
